Pascal/test/cohadar/pascal/errors/bad_operands_arithmetic2.pas
program test;
var a: boolean;
	b: integer;
	
begin
	b := -a;
end.